--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
                     <div class="col-lg-5">
                         <!-- <img src="assets/images/hero-image.webp" alt="" class="img-fluid shadow rounded-1"> -->
                         <div class="banner-video">
-                            <img src="assets/images/video-frame.png" alt="video"
-                                class="img-fluid video-desktop">
+                            <img src="assets/images/video-frame.png" alt="video" class="img-fluid video-desktop">
                             <video class="banner-video-b" controls autoplay>
                                 <source src="https://mergeasy.com/dist/images/video.mp4" type="video/mp4">
                             </video>
