--- a/index2.html
+++ b/index2.html
@@ -43,8 +43,16 @@
                                 <a class="dropdown-item" href="#">MergeMerge</a>
                             </div>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link " href="#">Features</a>
+                        <li class="menu-item">
+                            <a href="#">Services</a>
+                            <ul class="sub-menu">
+                                <li><a href="services.php">Mobile Applications</a></li>
+                                <li><a href="services.php">Web Designing</a></li>
+                                <li><a href="services.php">Reputation Management</a></li>
+                                <li><a href="services.php">Website Development</a></li>
+                                <li><a href="services.php">SEO</a></li>
+                                <li><a href="services.php">Software Testing</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Pricing</a>
