--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="position-sticky top-0 z-3 shadow-sm">
         <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
             <div class="container">
                 <a class="navbar-brand" href="#">
