--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -5,7 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
     <title>Document</title>
+    <style>
+        .feature-icon{
+            height: 70px;
+            width: 70px;
+        }
+        /* .d-flex{
+            display: flex;
+        }
+        .align-items-start{
+            align-items: flex-start;
+        }
+        .justify-content-between{
+            justify-content: space-between;
+        } */
+    </style>
 </head>
 
 <body>
@@ -27,7 +44,76 @@
             <input type="search" name="" id="">
         </div>
         <div class="features-list">
-            
+            <div>
+                <a href="">
+                 <div class="d-flex align-items-start">
+                    <div>
+                        <img src="/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
+                    </div>
+                    <div>
+                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                        <p class="text">Create a custom ChatGPT prompt with dyamic data</p>
+                    </div>
+                 </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                 <div class="d-flex align-items-start">
+                    <div>
+                        <img src="/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
+                    </div>
+                    <div>
+                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                        <p class="text">Create a custom ChatGPT prompt with dyamic data</p>
+                    </div>
+                 </div>
+                </a>
+            </div>
+            <div>
+                <button>Load More</button>
+            </div>
+        </div>
+     </div>
+     <div class="templates">
+        <h2 class="heading-main">
+            Templates
+        </h2>
+        <div class="search-input">
+            <input type="search" name="" id="">
+        </div>
+        <div class="templates-list">
+            <div>
+                <a href="">
+                 <div class="d-flex align-items-start">
+                    <div>
+                        <img src="/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
+                    </div>
+                    <div>
+                        <h3 class="heading-secondry">se GPT to Craft an Icebreaker Based on a Website                        </h3>
+                        <p class="text">
+                            Input company websites, we'll scrape the content and use GPT to generate a an icebreaker
+                        </p>
+                    </div>
+                 </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                 <div class="d-flex align-items-start">
+                    <div>
+                        <img src="/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
+                    </div>
+                    <div>
+                        <h3 class="heading-secondry">se GPT to Craft an Icebreaker Based on a Website </h3>
+                        <p class="text">Input company websites, we'll scrape the content and use GPT to generate a an icebreaker</p>
+                    </div>
+                 </div>
+                </a>
+            </div>
+            <div>
+                <button>Load More</button>
+            </div>
         </div>
      </div>
   </div>
