--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -9,9 +9,25 @@
 
     <title>Document</title>
     <style>
+        body{
+            padding: 30px;
+        }
+        .sidebar{
+            width: 300px;
+            margin: 0px auto;
+            background-color: white;
+            padding:5px 15px 15px 15px;
+        }
+        .logo{
+            height: 70px;
+            width: 70px;  
+        }
         .feature-icon{
             height: 70px;
             width: 70px;
+        }
+        .setting-icon{
+            font-size: 30px;
         }
         /* .d-flex{
             display: flex;
@@ -26,13 +42,13 @@
 </head>
 
 <body>
-  <div class="sidebar">
+  <div class="sidebar shadow-sm">
     <div class="d-flex align-items-center justify-content-between">
         <div>
-            <img src="assets/images/logo.png" alt="">
+            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="" class="logo">
         </div>
         <div>
-            <i class="bi bi-gear"></i>
+            <a href="" class="text-dark mb-0 pb-0"><i class="bi bi-gear setting-icon"></i></a>
         </div>
     </div>
     <hr>
@@ -48,7 +64,7 @@
                 <a href="">
                  <div class="d-flex align-items-start">
                     <div>
-                        <img src="/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
+                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
                     </div>
                     <div>
                         <h3 class="heading-secondry">ChatGPT custom prompt</h3>
@@ -61,7 +77,7 @@
                 <a href="">
                  <div class="d-flex align-items-start">
                     <div>
-                        <img src="/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
+                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
                     </div>
                     <div>
                         <h3 class="heading-secondry">ChatGPT custom prompt</h3>
@@ -87,7 +103,7 @@
                 <a href="">
                  <div class="d-flex align-items-start">
                     <div>
-                        <img src="/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
+                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
                     </div>
                     <div>
                         <h3 class="heading-secondry">se GPT to Craft an Icebreaker Based on a Website                        </h3>
@@ -102,7 +118,7 @@
                 <a href="">
                  <div class="d-flex align-items-start">
                     <div>
-                        <img src="/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
+                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
                     </div>
                     <div>
                         <h3 class="heading-secondry">se GPT to Craft an Icebreaker Based on a Website </h3>
