--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -6,133 +6,238 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
     <style>
-        body{
+        body {
             padding: 30px;
+            font-family: 'poppins', sans-serif;
         }
-        .sidebar{
-            width: 300px;
+
+        .sidebar {
+            width: 100%;
             margin: 0px auto;
             background-color: white;
-            padding:5px 15px 15px 15px;
+            padding: 15px 15px 15px 15px;
         }
-        .logo{
-            height: 70px;
-            width: 70px;  
+
+        .logo {
+            height: 50px;
+            width: 50px;
         }
-        .feature-icon{
-            height: 70px;
-            width: 70px;
+
+        .feature-icon {
+            height: 30px;
+            width: 30px;
         }
-        .setting-icon{
-            font-size: 30px;
+
+        .feature-icon-div {
+            margin-right: 10px;
         }
-        /* .d-flex{
-            display: flex;
+
+        .setting-icon {
+            font-size: 24px;
         }
-        .align-items-start{
-            align-items: flex-start;
+
+        .tab {
+            overflow: hidden;
         }
-        .justify-content-between{
-            justify-content: space-between;
-        } */
+
+        /* Style the buttons inside the tab */
+        .tab button {
+            background-color: inherit;
+            float: left;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: 500;
+            color: gray;
+        }
+
+        /* Change background color of buttons on hover */
+        .tab button:hover {
+            border-bottom: 2px solid purple;
+            color: black;
+        }
+
+        /* Create an active/current tablink class */
+        .tab button.active {
+            border-bottom: 2px solid purple;
+            color: black;
+        }
+
+        /* Style the tab content */
+        .tabcontent {
+            display: none;
+            border-top: none;
+        }
+
+        .heading-secondry {
+            font-size: 14px;
+            font-weight: 600;
+            color: black;
+        }
+
+        .text {
+            font-size: 14px;
+            font-weight: 400;
+            color: gray;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+        }
     </style>
 </head>
 
 <body>
-  <div class="sidebar shadow-sm">
-    <div class="d-flex align-items-center justify-content-between">
-        <div>
-            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="" class="logo">
+    <div class="sidebar shadow">
+        <div class="d-flex align-items-center justify-content-between">
+            <div>
+                <img src="https://mergeasy123.netlify.app/sidebar/logo.jpg" alt="" class="logo">
+            </div>
+            <div>
+                <a href="" class="text-dark mb-0 pb-0"><i class="bi bi-gear setting-icon"></i></a>
+            </div>
+        </div>
+        <hr>
+        <div class="tab">
+            <button class="tablinks" id="defaultOpen" onclick="homePage(event, 'Features')">Features</button>
+            <button class="tablinks" onclick="homePage(event, 'Templates')">Templates</button>
+        </div>
+
+        <div id="Features" class="tabcontent">
+            <div class="features">
+                <!-- <h2 class="heading-main">
+                    Features
+                </h2> -->
+                <div class="search-input mt-2">
+                    <input type="search" name="" id="" class="w-100">
+                </div>
+                <div class="features-list mt-3">
+                    <div>
+                        <a href="">
+                            <div class="d-flex align-items-start">
+                                <div class="feature-icon-div">
+                                    <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                        class="feature-icon">
+                                </div>
+                                <div>
+                                    <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                                    <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <hr>
+                    <div>
+                        <a href="">
+                            <div class="d-flex align-items-start">
+                                <div class="feature-icon-div">
+                                    <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                        class="feature-icon">
+                                </div>
+                                <div>
+                                    <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                                    <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="mt-3">
+                        <button class="w-100">Load More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="Templates" class="tabcontent">
+            <div class="templates">
+                <!-- <h2 class="heading-main">
+                    Templates
+                </h2> -->
+                <div class="search-input mt-2">
+                    <input type="search" name="" id="" class="w-100">
+                </div>
+                <div class="templates-list mt-3">
+                    <div>
+                        <a href="">
+                            <div class="d-flex align-items-start">
+                                <div class="feature-icon-div">
+                                    <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                        class="feature-icon">
+                                </div>
+                                <div>
+                                    <h3 class="heading-secondry">GPT to Craft an Icebreaker Based on a Website </h3>
+                                    <p class="text mb-0 pb-0">
+                                        Input company websites, we'll scrape the content and use GPT to
+                                        generate a an icebreaker
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <hr>
+                    <div>
+                        <a href="">
+                            <div class="d-flex align-items-start">
+                                <div class="feature-icon-div">
+                                    <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                        class="feature-icon">
+                                </div>
+                                <div>
+                                    <h3 class="heading-secondry"> GPT to Craft an Icebreaker Based on a Website </h3>
+                                    <p class="text mb-0 pb-0">Input company websites, we'll scrape the content and use
+                                        GPT to
+                                        generate a an icebreaker</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="mt-3">
+                        <button class="w-100">Load More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+        <div class="d-flex">
+            <div>
+                <i class="bi bi-credit-card-2-front-fill"></i>
+            </div>
+            <div>
+                1000/100 monthly credits left.
+            </div>
         </div>
         <div>
-            <a href="" class="text-dark mb-0 pb-0"><i class="bi bi-gear setting-icon"></i></a>
+            <button class="w-100 mt-2">UPGRADE</button>
         </div>
+
+
     </div>
-    <hr>
-     <div class="features">
-        <h2 class="heading-main">
-            Features
-        </h2>
-        <div class="search-input">
-            <input type="search" name="" id="">
-        </div>
-        <div class="features-list">
-            <div>
-                <a href="">
-                 <div class="d-flex align-items-start">
-                    <div>
-                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
-                    </div>
-                    <div>
-                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
-                        <p class="text">Create a custom ChatGPT prompt with dyamic data</p>
-                    </div>
-                 </div>
-                </a>
-            </div>
-            <div>
-                <a href="">
-                 <div class="d-flex align-items-start">
-                    <div>
-                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
-                    </div>
-                    <div>
-                        <h3 class="heading-secondry">ChatGPT custom prompt</h3>
-                        <p class="text">Create a custom ChatGPT prompt with dyamic data</p>
-                    </div>
-                 </div>
-                </a>
-            </div>
-            <div>
-                <button>Load More</button>
-            </div>
-        </div>
-     </div>
-     <div class="templates">
-        <h2 class="heading-main">
-            Templates
-        </h2>
-        <div class="search-input">
-            <input type="search" name="" id="">
-        </div>
-        <div class="templates-list">
-            <div>
-                <a href="">
-                 <div class="d-flex align-items-start">
-                    <div>
-                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
-                    </div>
-                    <div>
-                        <h3 class="heading-secondry">se GPT to Craft an Icebreaker Based on a Website                        </h3>
-                        <p class="text">
-                            Input company websites, we'll scrape the content and use GPT to generate a an icebreaker
-                        </p>
-                    </div>
-                 </div>
-                </a>
-            </div>
-            <div>
-                <a href="">
-                 <div class="d-flex align-items-start">
-                    <div>
-                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt" class="feature-icon">
-                    </div>
-                    <div>
-                        <h3 class="heading-secondry">se GPT to Craft an Icebreaker Based on a Website </h3>
-                        <p class="text">Input company websites, we'll scrape the content and use GPT to generate a an icebreaker</p>
-                    </div>
-                 </div>
-                </a>
-            </div>
-            <div>
-                <button>Load More</button>
-            </div>
-        </div>
-     </div>
-  </div>
+
+    <script>
+        function homePage(evt, cityName) {
+            var i, tabcontent, tablinks;
+            tabcontent = document.getElementsByClassName("tabcontent");
+            for (i = 0; i < tabcontent.length; i++) {
+                tabcontent[i].style.display = "none";
+            }
+            tablinks = document.getElementsByClassName("tablinks");
+            for (i = 0; i < tablinks.length; i++) {
+                tablinks[i].className = tablinks[i].className.replace(" active", "");
+            }
+            document.getElementById(cityName).style.display = "block";
+            evt.currentTarget.className += " active";
+        }
+        document.getElementById("defaultOpen").click();
+
+    </script>
 </body>
 
 </html>
