--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -17,15 +17,16 @@
         }
 
         .sidebar {
-            width: 100%;
+            width:300px;
             margin: 0px auto;
             background-color: white;
             padding: 15px 15px 15px 15px;
+
         }
 
         .logo {
-            height: 50px;
-            width: 50px;
+            height: 40px;
+            width:auto;
         }
 
         .feature-icon {
@@ -35,6 +36,7 @@
 
         .feature-icon-div {
             margin-right: 10px;
+            padding: 7px;
         }
 
         .setting-icon {
@@ -43,6 +45,7 @@
 
         .tab {
             overflow: hidden;
+            /* border-bottom: 1px solid rgb(238, 237, 237); */
         }
 
         /* Style the buttons inside the tab */
@@ -52,8 +55,8 @@
             border: none;
             outline: none;
             cursor: pointer;
-            font-size: 16px;
-            font-weight: 500;
+            font-size: 14px;
+            font-weight: 400;
             color: gray;
         }
 
@@ -74,15 +77,22 @@
             display: none;
             border-top: none;
         }
-
-        .heading-secondry {
+         .searchbar{
+            border: 1px solid rgb(221, 221, 221);
+            border-radius: 3px;
             font-size: 14px;
-            font-weight: 600;
+            padding: 5px 7px;
+            font-weight: 400;
+         }
+        .heading-secondry {
+            font-size: 14px !important;
+            font-weight: 500;
             color: black;
+            margin-bottom: 3px;
         }
 
         .text {
-            font-size: 14px;
+            font-size: 12px;
             font-weight: 400;
             color: gray;
             overflow: hidden;
@@ -91,36 +101,78 @@
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
         }
+        .load-more-btn{
+            font-size: 14px;
+             background-color: transparent;
+             border: none;
+             color:#C78CE9;
+        }
+        .upgrade-icon{
+            font-size: 16px;
+        }
+        .upgrade-text{
+            font-size: 14px;
+            color: gray;
+        }
+        .card-bg{
+            background-color: #f6f9fc;
+            padding:10px 7px;
+            border-radius: 3px;
+        }
+        .upgrade-btn{
+            background-color: #FEF1FF;
+            border: none;
+            font-size: 14px;
+            font-weight: 500;
+            color:#C78CE9;
+            padding: 7px;
+            width: fit-content;
+        }
     </style>
 </head>
 
 <body>
     <div class="sidebar shadow">
-        <div class="d-flex align-items-center justify-content-between">
+        <div class="d-flex align-items-center justify-content-between px-1">
             <div>
-                <img src="https://mergeasy123.netlify.app/sidebar/logo.jpg" alt="" class="logo">
+                <img src="https://mergeasy123.netlify.app/sidebar/logo.png" alt="" class="logo">
             </div>
-            <div>
-                <a href="" class="text-dark mb-0 pb-0"><i class="bi bi-gear setting-icon"></i></a>
+            <div class="pe-2">
+                <a href="" class="text-dark mb-0 pb-0"><i class="bi bi-gear setting-icon mt-1"></i></a>
             </div>
         </div>
         <hr>
-        <div class="tab">
+        <div class="tab mx-2">
             <button class="tablinks" id="defaultOpen" onclick="homePage(event, 'Features')">Features</button>
             <button class="tablinks" onclick="homePage(event, 'Templates')">Templates</button>
         </div>
 
-        <div id="Features" class="tabcontent">
+        <div id="Features" class="tabcontent px-2">
             <div class="features">
                 <!-- <h2 class="heading-main">
                     Features
                 </h2> -->
-                <div class="search-input mt-2">
-                    <input type="search" name="" id="" class="w-100">
+                <div class="search-input mt-2 py-1">
+                    <input type="search" name="" id="" class="w-100 searchbar" placeholder="Search or ask anything...">
                 </div>
-                <div class="features-list mt-3">
-                    <div>
-                        <a href="">
+           
+                <div class="features-list mt-2 ">
+                    <div class="card-bg mb-2 shadow-sm">
+                        <a href="" class="text-decoration-none">
+                            <div class="d-flex align-items-start">
+                                <div class="feature-icon-div">
+                                    <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                        class="feature-icon">
+                                </div>
+                                <div>
+                                    <h3 class="heading-secondry">ChatGPT custom prompt</h3>
+                                    <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div >
+                    <div class="card-bg  mb-2 shadow-sm ">
+                        <a href="" class="text-decoration-none">
                             <div class="d-flex align-items-start">
                                 <div class="feature-icon-div">
                                     <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
@@ -133,39 +185,24 @@
                             </div>
                         </a>
                     </div>
-                    <hr>
-                    <div>
-                        <a href="">
-                            <div class="d-flex align-items-start">
-                                <div class="feature-icon-div">
-                                    <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
-                                        class="feature-icon">
-                                </div>
-                                <div>
-                                    <h3 class="heading-secondry">ChatGPT custom prompt</h3>
-                                    <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dyamic data</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="mt-3">
-                        <button class="w-100">Load More</button>
+                    <div class="mt-3 pt-2">
+                        <button class="w-100 load-more-btn">Load More&nbsp;<i class="bi bi-arrow-clockwise ms-1"></i></button>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div id="Templates" class="tabcontent">
+        <div id="Templates" class="tabcontent px-2">
             <div class="templates">
                 <!-- <h2 class="heading-main">
                     Templates
                 </h2> -->
-                <div class="search-input mt-2">
-                    <input type="search" name="" id="" class="w-100">
+                <div class="search-input mt-2 py-1">
+                    <input type="search" name="" id="" class="w-100 searchbar" placeholder="Search or ask anything...">
                 </div>
                 <div class="templates-list mt-3">
-                    <div>
-                        <a href="">
+                    <div class="">
+                        <a href="" class="text-decoration-none">
                             <div class="d-flex align-items-start">
                                 <div class="feature-icon-div">
                                     <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
@@ -182,8 +219,8 @@
                         </a>
                     </div>
                     <hr>
-                    <div>
-                        <a href="">
+                    <div class="">
+                        <a href="" class="text-decoration-none">
                             <div class="d-flex align-items-start">
                                 <div class="feature-icon-div">
                                     <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
@@ -198,27 +235,26 @@
                             </div>
                         </a>
                     </div>
+                    <hr>
                     <div class="mt-3">
-                        <button class="w-100">Load More</button>
+                        <button class="w-100 load-more-btn  ">Load More<i class="bi bi-arrow-clockwise ms-1"></i></button>
                     </div>
                 </div>
             </div>
         </div>
 
         <hr>
-        <div class="d-flex">
-            <div>
-                <i class="bi bi-credit-card-2-front-fill"></i>
+        <div class="d-flex align-items-center">
+            <div class="upgrade-icon">
+                <i class="bi bi-credit-card-2-front-fill "></i>&nbsp;&nbsp;
             </div>
-            <div>
+            <div class="upgrade-text ">
                 1000/100 monthly credits left.
             </div>
         </div>
-        <div>
-            <button class="w-100 mt-2">UPGRADE</button>
+        <div class="shadow-sm">
+            <button class="w-100 mt-2 upgrade-btn">UPGRADE</button>
         </div>
-
-
     </div>
 
     <script>
