--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -132,12 +132,19 @@
             height: 22px;
             width: auto;
         }
+        .upgrade-icon2 img {
+            height: 20px;
+            width: auto;
+        }
 
         .upgrade-text {
             font-size: 12px;
             color: gray;
         }
-
+         .upgrade-text a{
+            font-size: 12px;
+            color: gray;
+         }
         .card-bg {
             background-color: #f6f9fc;
             padding: 10px 7px;
@@ -798,10 +805,10 @@
         </div>
         <div class="d-flex align-items-center " >
             <div class="upgrade-text ">
-                Free Credits
+               <a href="" class="">Free Credits</a>
             </div>
-            <div class="upgrade-icon">
-                <img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt="">&nbsp;&nbsp;
+            <div class="upgrade-icon2">
+                &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt="">
             </div>
         </div>
      
