--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <div class="dropdownMenu bg-white shadow-sm">
                                 <div class="d-flex flex-lg-row flex-column">
                                     <div class="mb-3">
-                                        <a href="" class="text-decoration-none">
+                                        <a href="mergeasy.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-file-earmark-text"></i></div>
                                                 <div class="ms-2">
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="d-flex flex-lg-row flex-column mb-3">
                                     <div class="mb-lg-0 mb-3">
-                                        <a href="" class="text-decoration-none">
+                                        <a href="mergcall.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-pencil"></i></div>
                                                 <div class="ms-2">
