--- a/mergeasy.html
+++ b/mergeasy.html
@@ -45,12 +45,12 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav mx-auto  mt-2 mt-lg-0   w-75 justify-content-evenly ">
                         <li class="nav-item position-relative">
-                            <a class="nav-link dropdownMenu-link active-nav ">Products <img src="assets/images/arro.svg"
-                                    alt="" class="arrow-icon"></a>
+                            <a class="nav-link dropdownMenu-link ">Products <img src="assets/images/arro.svg" alt=""
+                                    class="arrow-icon"></a>
                             <div class="dropdownMenu bg-white shadow-sm">
                                 <div class="d-flex flex-lg-row flex-column">
                                     <div class="mb-3">
-                                        <a href="" class="text-decoration-none">
+                                        <a href="mergeasy.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-file-earmark-text"></i></div>
                                                 <div class="ms-2">
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="d-flex flex-lg-row flex-column mb-3">
                                     <div class="mb-lg-0 mb-3">
-                                        <a href="" class="text-decoration-none">
+                                        <a href="mergcall.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-pencil"></i></div>
                                                 <div class="ms-2">
