--- a/sidebar/AI.html
+++ b/sidebar/AI.html
@@ -385,7 +385,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
                                         <div class="feature-icon-div">
-                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt-icon.png" alt="chatgpt"
                                                 class="feature-icon">
 
                                         </div>
@@ -412,7 +412,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
                                         <div class="feature-icon-div">
-                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt-icon.png" alt="chatgpt"
                                                 class="feature-icon">
 
                                         </div>
@@ -439,7 +439,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
                                         <div class="feature-icon-div">
-                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt-icon.png" alt="chatgpt"
                                                 class="feature-icon">
 
                                         </div>
@@ -466,7 +466,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
                                         <div class="feature-icon-div">
-                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt-icon.png" alt="chatgpt"
                                                 class="feature-icon">
 
                                         </div>
@@ -493,7 +493,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
                                         <div class="feature-icon-div">
-                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt-icon.png" alt="chatgpt"
                                                 class="feature-icon">
 
                                         </div>
@@ -520,7 +520,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
                                         <div class="feature-icon-div">
-                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt-icon.png" alt="chatgpt"
                                                 class="feature-icon">
 
                                         </div>
@@ -546,7 +546,7 @@
                             <a class="text-decoration-none">
                                 <div class="d-flex align-items-start">
                                     <div class="feature-icon-div">
-                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt-icon.png" alt="chatgpt"
                                             class="feature-icon">
                                     </div>
                                     <div>
@@ -571,7 +571,7 @@
                             <div class="d-flex align-items-center">
                                 <div class="d-flex align-items-start">
                                     <div class="feature-icon-div">
-                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt-icon.png" alt="chatgpt"
                                             class="feature-icon">
                                     </div>
                                     <div>
@@ -880,7 +880,7 @@
                         <div class="d-flex align-items-center">
                             <div class="d-flex align-items-start">
                                 <div class="feature-icon-div">
-                                    <img src="https://mergeasy123.netlify.app/sidebar/chatgpt.png" alt="chatgpt"
+                                    <img src="https://mergeasy123.netlify.app/sidebar/chatgpt-icon.png" alt="chatgpt"
                                         class="feature-icon">
 
                                 </div>
