--- a/mergeasy.html
+++ b/mergeasy.html
@@ -34,7 +34,7 @@
     <header class="position-sticky top-0 z-3 shadow-sm">
         <nav class="navbar navbar-expand-xl navbar-light bg-light py-3">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="assets/images/logo.png" alt="">
                 </a>
                 <button class="navbar-toggler d-xl-none" type="button" data-bs-toggle="collapse"
@@ -126,7 +126,7 @@
                             <a class="nav-link " href="#">Features</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Plan & Pricing</a>
+                            <a class="nav-link" href="plan&pricing.html">Plan & Pricing</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">API Reference</a>
@@ -160,7 +160,7 @@
                                     </a>
                                 </div>
                                 <div class="mb-2">
-                                    <a href="" class="text-decoration-none">
+                                    <a href="about.html" class="text-decoration-none">
                                         <div class="dropdown-item d-flex align-items-center text-start">
                                             <div class="nav-icon2"><i class="bi bi-info-circle"></i></div>
                                             <!-- About Icon -->
@@ -171,7 +171,7 @@
                                     </a>
                                 </div>
                                 <div class="">
-                                    <a href="" class="text-decoration-none">
+                                    <a href="about.html#faq" class="text-decoration-none">
                                         <div class="dropdown-item d-flex align-items-center text-start">
                                             <div class="nav-icon2"><i class="bi bi-question-circle"></i></div>
                                             <!-- FAQ Icon -->
@@ -190,7 +190,7 @@
                                     class="arrow-icon"></a>
                             <div class="dropdownMenu dropdownMenu2 bg-white shadow-sm">
                                 <div class="mb-2">
-                                    <a href="" class="text-decoration-none">
+                                    <a href="index.html#Industries-sec" class="text-decoration-none">
                                         <div class="dropdown-item d-flex align-items-center text-start">
                                             <div class="nav-icon2"><i class="bi bi-building"></i></div>
                                             <!-- Real Estate Icon -->
@@ -201,7 +201,7 @@
                                     </a>
                                 </div>
                                 <div class="mb-2">
-                                    <a href="" class="text-decoration-none">
+                                    <a href="index.html#Industries-sec" class="text-decoration-none">
                                         <div class="dropdown-item d-flex align-items-center text-start">
                                             <div class="nav-icon2"><i class="bi bi-house-door"></i></div>
                                             <!-- Home Services Icon -->
@@ -212,7 +212,7 @@
                                     </a>
                                 </div>
                                 <div class="mb-2">
-                                    <a href="" class="text-decoration-none">
+                                    <a href="index.html#Industries-sec" class="text-decoration-none">
                                         <div class="dropdown-item d-flex align-items-center text-start">
                                             <div class="nav-icon2"><i class="bi bi-cash-stack"></i></div>
                                             <!-- Finance and Accounting Icon -->
@@ -223,7 +223,7 @@
                                     </a>
                                 </div>
                                 <div class="">
-                                    <a href="" class="text-decoration-none">
+                                    <a href="index.html#Industries-sec" class="text-decoration-none">
                                         <div class="dropdown-item d-flex align-items-center text-start">
                                             <div class="nav-icon2"><i class="bi bi-key"></i></div>
                                             <!-- Property Management Icon -->
@@ -263,7 +263,7 @@
                         <h1 class="mb-3 pb-0">
                             Out of the box Integration and Services!
                         </h1>
-                        <p class="hero-text pe-lg-3 mt-2 mb-0">
+                        <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0">
                             Generating and digital signing of your docx or pdf documents with merged data has become
                             more easier!
                         </p>
@@ -700,7 +700,7 @@
                                         </a>
                                     </div>
                                     <div class="hero-btn">
-                                        <a href="" class="secondry-button">Explore API Features</a>
+                                        <a href="https://mergeasy.docs.apiary.io/" class="secondry-button">Explore API Features</a>
                                     </div>
                                 </div>
                             </div>
@@ -763,7 +763,7 @@
                                 <a class="text-white">MergeCall</a>
                             </p>
                             <p>
-                                <a class="text-white">API Access</a>
+                                <a href="" class="text-white">API Access</a>
                             </p>
                             <p>
                                 <a class="text-white">Help Center</a>
