--- a/mergcall.html
+++ b/mergcall.html
@@ -160,7 +160,7 @@
                                     </a>
                                 </div>
                                 <div class="">
-                                    <a href="about.html#faq" class="text-decoration-none">
+                                    <a href="faq.html" class="text-decoration-none">
                                         <div class="dropdown-item d-flex align-items-center text-start">
                                             <div class="nav-icon2"><i class="bi bi-question-circle"></i></div>
                                             <!-- FAQ Icon -->
