--- a/mergeasy.html
+++ b/mergeasy.html
@@ -286,7 +286,7 @@
                         <!-- <img src="assets/images/hero-image.webp" alt="" class="img-fluid shadow rounded-1 mt-lg-4"> -->
                         <div class="banner-video mx-auto d-flex justify-content-center ">
                             <!-- <img src="assets/images/video-frame.png" alt="video" class="img-fluid video-desktop"> -->
-                            <video class="banner-video-b border" controls autoplay loop>
+                            <video class="banner-video-b border shadow rounded-2" controls autoplay loop >
                                 <source src="https://mergeasy.com/dist/images/video.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
@@ -379,11 +379,13 @@
                         </h2>
                         <p class="text2">
                             Unleash intelligent inquiries for instant insights into your uploaded documents.
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis eum modi sunt, placeat mollitia, doloremque, numquam necessitatibus ipsam impedit qui rerum molestias adipisci. Accusantium, numquam facilis fugiat adipisci consequuntur unde aliquid repellat sint fugit ea, vero iusto porro deleniti voluptate.
                         </p>
                     </div>
                     <div class="col-lg-7 mt-lg-0 mt-3 mx-auto">
                         <div class="app-box-row d-flex justify-content-center">
-                            <img src="https://mergeasy.com/dist/images/answer-API.gif" alt="Choose deliery" class="border  img-fluid">
+                            <img src="https://mergeasy.com/dist/images/answer-API.gif" alt="Choose deliery"
+                                class="border  img-fluid">
                         </div>
                     </div>
                 </div>
@@ -411,12 +413,12 @@
                             <h5>Save
                                 Your time</h5>
                             <p class="text">
-                               Generate documents using our fast native API compared to time consuming work arounds
+                                Generate documents using our fast native API compared to time consuming work arounds
 
                             </p>
                         </div>
                     </div>
-                  
+
                     <div class="col-lg-3 mb-lg-0 mb-4">
                         <div class="px-3 py-4 text-center merg-card">
                             <!-- <h3>MergeMerge</h3>
@@ -427,7 +429,8 @@
                             <h5>Intuitive
                                 Workflow</h5>
                             <p class="text">
-                                You can integrate our API in any possible system, as the workflow is not married to only one service
+                                You can integrate our API in any possible system, as the workflow is not married to only
+                                one service
 
 
                             </p>
@@ -489,7 +492,8 @@
                             <h5>Contract / Agreeements
                             </h5>
                             <p class="text">
-                                Generate Contracts and Agreements dynamically thereby reducing turnaround time after a sale is made.
+                                Generate Contracts and Agreements dynamically thereby reducing turnaround time after a
+                                sale is made.
 
 
                             </p>
@@ -505,7 +509,8 @@
                             <h5>Marketing Documents
                             </h5>
                             <p class="text">
-                                Send out marketing to prospects and customers with easy. inform about offers, coupons and gifts cards just by tapping a single button.
+                                Send out marketing to prospects and customers with easy. inform about offers, coupons
+                                and gifts cards just by tapping a single button.
 
 
 
@@ -522,7 +527,8 @@
                             <h5>Eductional Documents
                             </h5>
                             <p class="text">
-                                Send out Certificates, Admission Document, Free Receipts, etc. by integrating into your existing system.
+                                Send out Certificates, Admission Document, Free Receipts, etc. by integrating into your
+                                existing system.
 
 
 
@@ -539,7 +545,8 @@
                             <h5>Personalized Documents
                             </h5>
                             <p class="text">
-                                Create customized templates by uploading a word document, or building document in Docupilot and integrating with your favourite apps.
+                                Create customized templates by uploading a word document, or building document in
+                                Docupilot and integrating with your favourite apps.
 
 
                             </p>
@@ -555,7 +562,9 @@
                             <h5>Real Estate Contracts & Rentals
                             </h5>
                             <p class="text">
-                                Close more deals faster by issuing Rental Agreements, and Contracts just by entering a few details in a form. Dont's worry about sending out emails to prospects. Let us take care of it.
+                                Close more deals faster by issuing Rental Agreements, and Contracts just by entering a
+                                few details in a form. Dont's worry about sending out emails to prospects. Let us take
+                                care of it.
 
 
 
@@ -572,7 +581,8 @@
                             <h5>Invoices & Receipts
                             </h5>
                             <p class="text">
-                                Create standards themed invoices for your organization, just provides line items dynamically and issue invoices and send receipts without manually sending out emails.
+                                Create standards themed invoices for your organization, just provides line items
+                                dynamically and issue invoices and send receipts without manually sending out emails.
 
 
                             </p>
@@ -588,7 +598,8 @@
                             <h5>Proposals & Quotes
                             </h5>
                             <p class="text">
-                                Cut down your time in creating Proposals and Quotes by creating a custom themed template and providing just the content or line items dynamically.
+                                Cut down your time in creating Proposals and Quotes by creating a custom themed template
+                                and providing just the content or line items dynamically.
 
 
                             </p>
@@ -604,7 +615,8 @@
                             <h5>HR Documents
                             </h5>
                             <p class="text">
-                                Create offer letters, generate on boarding documents and all other HR documents on the go just linking yo your favourite HR Management applications.
+                                Create offer letters, generate on boarding documents and all other HR documents on the
+                                go just linking yo your favourite HR Management applications.
 
 
                             </p>
@@ -620,7 +632,8 @@
                             <h5>Purchase & Sales Orders
                             </h5>
                             <p class="text">
-                                Create your purchase and sales orders just by filling out a from within couple of minutes.
+                                Create your purchase and sales orders just by filling out a from within couple of
+                                minutes.
 
 
 
@@ -679,7 +692,7 @@
                 </div>
             </div>
         </section>
-    
+
         <section class="bg-light">
             <div class="container ">
                 <div class="row">
@@ -700,7 +713,8 @@
                                         </a>
                                     </div>
                                     <div class="hero-btn">
-                                        <a href="https://mergeasy.docs.apiary.io/" class="secondry-button">Explore API Features</a>
+                                        <a href="https://mergeasy.docs.apiary.io/" class="secondry-button">Explore API
+                                            Features</a>
                                     </div>
                                 </div>
                             </div>
