--- a/mergcall.html
+++ b/mergcall.html
@@ -273,7 +273,7 @@
                         <!-- <img src="assets/images/hero-image.webp" alt="" class="img-fluid shadow rounded-1 mt-lg-4"> -->
                         <div class="banner-video mx-auto d-flex justify-content-center ">
                             <!-- <img src="assets/images/video-frame.png" alt="video" class="img-fluid video-desktop"> -->
-                            <video class="banner-video-b border" controls autoplay loop>
+                            <video class="banner-video-b border shadow rounded-2" controls autoplay loop >
                                 <source src="https://mergeasy.com/dist/images/video.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
