--- a/sidebar/AI.html
+++ b/sidebar/AI.html
@@ -504,8 +504,7 @@
                                                         alt="">&nbsp;<span>3</span>
                                                 </div>
                                             </div>
-                                            <p class="text mb-0 pb-0">Lorem ipsum is to dolor sit, amet consectetur
-                                                adipisicing.</p>
+                                            <p class="text mb-0 pb-0">Create a custom ChatGPT prompt with dynamic data</p>
                                         </div>
                                     </div>
 
@@ -525,14 +524,13 @@
                                         </div>
                                         <div class="">
                                             <div class="d-flex align-items-start justify-content-between">
-                                                <h3 class="heading-secondry ">ChatGPT custom prompt</h3>
+                                                <h3 class="heading-secondry "> Perform a Google Search                                                </h3>
                                                 <div class="credit-number ">
-                                                    <img src="https://mergeasy123.netlify.app/sidebar/credit.png"
+                                                    <img src="https://mergeasy123.netlify.app/sidebar/google.png"
                                                         alt="">&nbsp;<span>3</span>
                                                 </div>
                                             </div>
-                                            <p class="text mb-0 pb-0">Lorem ipsum is to dolor sit, amet consectetur
-                                                adipisicing.</p>
+                                            <p class="text mb-0 pb-0">Perform any kind of search query using Google’s search engine.</p>
                                         </div>
                                     </div>
 
