--- a/sidebar/scrapper.html
+++ b/sidebar/scrapper.html
@@ -1452,19 +1452,20 @@
                         <div class="d-flex align-items-center">
                             <div class="d-flex align-items-start">
                                 <div class="feature-icon-div">
-                                    <img src="https://mergeasy123.netlify.app/sidebar/google.png" alt="chatgpt"
+                                    <img src="https://mergeasy123.netlify.app/sidebar/compaign.jpg" alt="chatgpt"
                                         class="feature-icon2">
                                 </div>
                                 <div class="">
                                     <div class="d-flex align-items-start justify-content-between">
-                                        <h3 class="heading-secondry">Scrapper ipsum dolor sit. </h3>
+                                        <h3 class="heading-secondry"> Add lead to Compaign
+                                        </h3>
                                         <div class="credit-number ">
                                             <img src="https://mergeasy123.netlify.app/sidebar/credit.png"
                                                 alt="">&nbsp;<span>3</span>
                                         </div>
                                     </div>
-                                    <p class="text mb-0 pb-0">Perform any kind of search query using
-                                        Google’s search engine.</p>
+                                    <p class="text mb-0 pb-0">Add a lead to a campaign in Instantly
+                                        .</p>
                                     <a href="" class="tutorial"><i class="bi bi-play-circle"></i>&nbsp;Watch Full
                                         Tutorial</a>
                                 </div>
