--- a/sidebar/scrapper.html
+++ b/sidebar/scrapper.html
@@ -650,20 +650,21 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
                                         <div class="feature-icon-div">
-                                            <img src="https://mergeasy123.netlify.app/sidebar/chatgpt-icon.png"
+                                            <img src="https://mergeasy123.netlify.app/sidebar/compaign.jpg"
                                                 alt="chatgpt" class="feature-icon">
 
                                         </div>
                                         <div class="">
                                             <div class="d-flex align-items-start justify-content-between">
-                                                <h3 class="heading-secondry ">ChatGPT custom prompt</h3>
+                                                <h3 class="heading-secondry ">Add lead to Compaign
+                                                </h3>
                                                 <div class="credit-number ">
                                                     <img src="https://mergeasy123.netlify.app/sidebar/credit.png"
                                                         alt="">&nbsp;<span>3</span>
                                                 </div>
                                             </div>
-                                            <p class="text mb-0 pb-0">Lorem ipsum is to dolor sit, amet consectetur
-                                                adipisicing.</p>
+                                            <p class="text mb-0 pb-0">Add a lead to a campaign in Instantly
+                                                .</p>
                                         </div>
                                     </div>
 
