--- a/sidebar/scrapper.html
+++ b/sidebar/scrapper.html
@@ -623,7 +623,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
                                         <div class="feature-icon-div">
-                                            <img src="https://mergeasy123.netlify.app/sidebar/compaign.jpg"
+                                            <img src="https://mergeasy123.netlify.app/sidebar/compaign.png"
                                                 alt="chatgpt" class="feature-icon">
 
                                         </div>
@@ -1426,7 +1426,7 @@
                         <div class="d-flex align-items-center">
                             <div class="d-flex align-items-start">
                                 <div class="feature-icon-div">
-                                    <img src="https://mergeasy123.netlify.app/sidebar/compaign.jpg" alt="chatgpt"
+                                    <img src="https://mergeasy123.netlify.app/sidebar/compaign.png" alt="chatgpt"
                                         class="feature-icon2">
                                 </div>
                                 <div class="">
